--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@mui/material": "^5.4.3",
     "@mui/x-date-pickers": "^7.12.0",
     "@popperjs/core": "^2.11.2",
+    "@supabase/supabase-js": "^2.45.1",
     "apexcharts-clevision": "3.28.5",
     "axios": "^1.7.3",
     "babel-eslint": "^10.1.0",
@@ -59,6 +60,7 @@
     "cookie": "^0.6.0",
     "dayjs": "^1.11.12",
     "eslint-plugin-react": "^7.29.4",
+    "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "mdi-material-ui": "^7.1.0",
     "mui-datatables": "^4.3.0",
